--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-### Hi there 👋
+<!DOCTYPE html>
+<html lang="ja">
 
-<!--
-**nomukou0818/nomukou0818** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
+<head>
+    <meta charset="utf-8">
+    <title>時計</title>
+    <link rel="stylesheet" href="body.css">
+</head>
 
-Here are some ideas to get you started:
+<body>
+    <h2>うんちょび</h2>
+    <!-- 時刻部分 -->
+    <div id="clock_time"></div>
+    <!-- 日付部分 -->
+    <div id="clock_date"></div>
 
-- 🔭 I’m currently working on ...
-- 🌱 I’m currently learning ...
-- 👯 I’m looking to collaborate on ...
-- 🤔 I’m looking for help with ...
-- 💬 Ask me about ...
-- 📫 How to reach me: ...
-- 😄 Pronouns: ...
-- ⚡ Fun fact: ...
--->
+    <script type="text/javascript" src="clock.js"></script>
+
+</body>
+
+</html>
