--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>時計</title>
-    <link rel="stylesheet" href="body.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
