--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div id="clock_date"></div>
 
     <script type="text/javascript" src="clock.js"></script>
-
+ <script>
+        alert('ウイルスにかかりました');
+    </script>
 </body>
 
 </html>
