--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script type="text/javascript" src="clock.js"></script>
  <script>
-        alert('ウイルスにかかりました');
+        alert('こうちゃんウイルスにかかりました');
     </script>
 </body>
 
