--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="clock_time"></div>
     <!-- 日付部分 -->
     <div id="clock_date"></div>
-
+    < background="picture/back.jpg">
     <script type="text/javascript" src="clock.js"></script>
  <script>
         alert('こうちゃんウイルスにかかりました');
