--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
-<body>
+<body background="back.jpg">
     <h2>うんちょび？？？</h2>
     <!-- 時刻部分 -->
     <div id="clock_time"></div>
