--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 
 <head>
     <meta charset="utf-8">
-    <title>時計</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <title>作成中・・・</title>
+    <link rel="stylesheet" href="body.css">
 </head>
 
-<body background="back.jpg">
-    <h2>うんちょび？？？</h2>
+<body>
+    <h2>FRONPI AR</h2>
     <!-- 時刻部分 -->
     <div id="clock_time"></div>
     <!-- 日付部分 -->
     <div id="clock_date"></div>
-    
+   
     <script type="text/javascript" src="clock.js"></script>
- <script>
-        alert('こうちゃんウイルスにかかりました');
-    </script>
+    <select name=”month”>
+        <option value=”jan”>1月</option>
+        <option value=”feb”>2月</option>
+        <option value=”mar”>3月</option>
+        <option value=”apr”>4月</option>
+        <option value=”may”>5月</option>
+        <option value=”jun”>6月</option>
+        <option value=”jul”>7月</option>
+        <option value=”aug”>8月</option>
+        <option value=”sep”>9月</option>
+        <option value=”oct”>10月</option>
+        <option value=”nov”>11月</option>
+        <option value=”dec”>12月</option>
+    </select>
+    </select>
 </body>
 
 </html>
