--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>作成中・・・</title>
+    <title>作成中？・・・</title>
     <link rel="stylesheet" href="body.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
